Fix minor spacing issue with alert

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,3 +23,7 @@ main > .sticky-bottom {
   width: 2.5rem;
   height: 2.5rem;
 }
+
+.alert {
+  margin-top: 1em;
+}
